--- a/content/reading/07-reading.Rmd
+++ b/content/reading/07-reading.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Text mining and Regular Expressions"
+title: "Version Constrol and Github"
 date: "2020-09-30"
 citeproc: false
 bibliography: ../../static/bib/references.bib
@@ -8,9 +8,8 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 
 # Required reading
 
-- [Chapter 14](https://r4ds.had.co.nz/strings.html) or [R for Data Science](https://r4ds.had.co.nz/) by [Garrett Grolemund](https://twitter.com/StatGarrett) and [Hadley Wickham](https://twitter.com/hadleywickham).
-- [Chapter 1](https://www.tidytextmining.com/tidytext.html) of [Text Mining with R](https://www.tidytextmining.com/) by [Julia Silge](https://twitter.com/juliasilge) and [David Robinson](https://twitter.com/drob).
+To be announced
 
 # Optional reading
 
-If you want more indept information about what is happening with regards to using text as data, tokenization, stopwords etc. Then you can look at the first 4 chapters of [Supervised Machine Learning for Text Analysis in R](https://smltar.com/) by [Emil Hvitfeldt](https://twitter.com/Emil_Hvitfeldt) and [Julia Silge](https://twitter.com/juliasilge).
+To be announced
