--- a/content/assignment/06-lab.Rmd
+++ b/content/assignment/06-lab.Rmd
@@ -33,6 +33,7 @@ Loading in reference transcription samples from https://www.mtsamples.com/
 
 ```{r, warning=FALSE, message=FALSE}
 library(readr)
+library(dplyr)
 mt_samples <- read_csv("https://raw.githubusercontent.com/USCbiostats/data-science-data/master/00_mtsamples/mtsamples.csv")
 mt_samples <- mt_samples %>%
   select(description, medical_specialty, transcription)
