--- a/content/reading/07-reading.Rmd
+++ b/content/reading/07-reading.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Version Constrol and Github"
+title: "Scraping, APIs, and Regular Expressions"
 date: "2020-09-30"
 citeproc: false
 bibliography: ../../static/bib/references.bib
@@ -8,8 +8,15 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 
 # Required reading
 
-To be announced
+- Chapter 17, Regular Expressions, from "R Programming for Data Science" ([link](https://bookdown.org/rdpeng/rprogdatascience/regular-expressions.html#))
+
+- The vignette from the R package `rvest`: "Harvesting the web with rvest" ([link](https://rvest.tidyverse.org/articles/harvesting-the-web.html))
+
+- This post "HTTP: The Protocol Every Web Developer Must Know - Part 1",
+excluding the section "Tools to View HTTP Traffic" [link](https://code.tutsplus.com/tutorials/http-the-protocol-every-web-developer-must-know-part-1--net-31177).
 
 # Optional reading
 
-To be announced
+- A Full course on APIs by Zapier ([link](https://zapier.com/learn/apis/))
+- R for Data Science chapter on Strings (includes a discussion of the `stringr`
+package, which we will be using) ([link](https://r4ds.had.co.nz/strings.html))
